examples/test/testpolicy16337.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16337
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key4: value31
      key27: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value35
          key8: value16
      podSelector:
        matchLabels:
          key43: value34
          key30: value7
          key39: value44
